<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Driver_FormFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1CECE"
        tools:context=".AddDriverDetailsActivity"
        >



        <View
            android:id="@+id/header_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#E0E0E0"
           app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Submit Button Container -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/header_divider"
          app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Stepper View -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginBottom="24dp">



                </LinearLayout>

                <!-- Driving vehicle radio group -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I will be driving this vehicle *"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="24dp">
                    <RadioButton
                        android:id="@+id/radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="yes"
                        android:layout_marginEnd="32dp"/>
                    <RadioButton
                        android:id="@+id/radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="no"
                        android:checked="true"/>
                </RadioGroup>

                <!-- Driver Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_name_compolsory"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driver_name"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:layout_marginBottom="24dp"/>

                <!-- Driver Phone Number -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_phone_number_compulsory"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driver_phone_number"
                    android:background="@drawable/edit_text_background"
                    android:padding="12dp"
                    android:layout_marginBottom="24dp"/>

                <!-- Upload Driver License -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_driver_license"
                    android:textColor="@android:color/black"

                    android:layout_marginBottom="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:background="@drawable/edit_text_background"
                     android:padding="16dp"
                    android:layout_marginBottom="24dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                         android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Driving Licence"
                            android:textColor="@android:color/black" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uploaded"
                            android:textColor="#4CAF50"/>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/camera_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:tint="#2979FF" />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>